[package]
name = "yaf"
version = "0.1.0"
authors = [ "kaktu5" ]
edition = "2021"
description = "Yet Another Fetch"
repository = "https://github.com/kaktu5/yaf"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[dependencies]
argp = "0.4.0"
dirs = "5.0.1"
thiserror = "2.0.11"
whoami = "1.5.2"
